# easyg

./: CODEOWNERS  CONTRIBUTING  README.md
.github/ISSUE_TEMPLATE/: documentation.md  new-feature.md  quick-fix.md
.github/workflows/: prevent-close-incomplete-issues.yml
backend/: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  requirements-dev.txt  requirements.dev.txt
backend/app/: .env.dev  main.py
backend/app/api/: routes.py
backend/app/core/: cors.py  exceptions.py
backend/app/schemas/: input.py  plotter.py
backend/app/services/: processing_plotter.py  processing_service.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_routes.py
backend/tests/unit/core/: test_cors.py  test_exceptions.py
backend/tests/unit/schemas/: test_schemas.py
backend/tests/unit/services/: test_graph_builder.py  test_process_plot.py  test_verify_input.py
docs/: CONTRIBUTING
docs/schemas/: architecture.v0.1.drawio  schemas.drawio
frontend/: .dockerignore  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
infrastructure/: docker-compose.yml
infrastructure/docker/: .dockerignore  backend.dockerfile  frontend.dockerfile
services/: .gitignore
services/gateway/: server.py
services/plotter/: models.py  plotter.py
test/data/: test.csv
