[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "EasyG plotting backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133",
    "uvicorn[standard]>=0.41",
    "matplotlib>=3.10",
    "numpy>=2.4",
    "pandas>=3.0",
    "python-multipart>=0.0.22",
    "python-decouple>=3.8",
    "pillow>=12.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "black>=26.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]